--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ build_search_index = false
 [extra]
 menu = [
      {url = "$BASE_URL", name = "Home"},
+     {url = "$BASE_URL/glog", name = "GLOG Rules"},
      {url = "https://github.com/hazellanes/", name = "github"},
      {url = "https://hazellanes.itch.io/", name = "itch.io"},
 ]
