Toggleable table of contents

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,8 @@
 # The URL the site will be built for
 base_url = "https://hazelnut.dev"
 
+title = "Hazel's Site"
+
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = false
 
