--- a/config.toml
+++ b/config.toml
@@ -16,6 +16,7 @@ build_search_index = false
 [extra]
 menu = [
   {url = "$BASE_URL", name = "Home"},
-  {url = "$BASE_URL/glog", name = "GLOG Rules"},
-  {url = "https://pics.hazelnut.dev", name = "Photos"},
+  {url = "$BASE_URL/glog", name = "GLOG Rules", external = true},
+  {url = "$BASE_URL/tabletop", name = "Tabletop Shit"},
+  {url = "https://pics.hazelnut.dev", name = "Photos", external = true},
 ]
